--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,15 @@
-<app-header></app-header>
-<app-footer></app-footer>
+
+    <app-header></app-header>
+
+
+    <router-outlet></router-outlet>
+
+
+    <app-footer></app-footer>
+
+
+
+
+
+
+
