--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,12 @@
-<p>page-not-found works!</p>
+<div class="page-wrap d-flex flex-row align-items-center centered">
+  <div class="container">
+      <div class="row justify-content-center">
+          <div class="col-md-12 text-center">
+              <span class="display-1 d-block">404</span>
+              <div class="mb-4 lead">La page demandé n'existe pas</div>
+              <a href="#" class="btn btn-link">Retour Acceuil</a>
+          </div>
+      </div>
+  </div>
+</div>
+
